# text

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  index.html
example/: CMakeLists.txt  bidirectional.cpp  breaks.cpp  case_mapping.cpp  code_point_to_utf8.cpp  collation.cpp  collation_search.cpp  encoding.cpp  gen_gb_file.py  graphemes.cpp  hello_world.cpp  normalize.cpp  param_conventions.cpp  segmented_vector.cpp  slicing.cpp  string_builder.cpp  string_snippets.cpp  string_view_snippets.cpp  text_snippets.cpp  text_view_snippets.cpp  transcoding.cpp  trie.cpp  utf8.cpp  utf8_guarantee.cpp
example/editor/: app_state.cpp  app_state.hpp  buffer.hpp  curses_interface.cpp  curses_interface.hpp  event.hpp  key_mappings.cpp  key_mappings.hpp  main.cpp
perf/: CMakeLists.txt  chinese_wiki.txt  collation_element_lookup_perf_000.cpp  collation_element_lookup_perf_001.cpp  collation_element_lookup_perf_002.cpp  collation_element_lookup_perf_003.cpp  collation_element_lookup_perf_004.cpp  collation_element_lookup_perf_005.cpp  collation_element_lookup_perf_006.cpp  collation_element_lookup_perf_007.cpp  collation_element_lookup_perf_008.cpp  collation_perf.cpp  collation_perf_000.cpp  collation_perf_001.cpp  collation_perf_002.cpp  collation_perf_003.cpp  collation_perf_004.cpp  collation_perf_005.cpp  collation_perf_006.cpp  collation_search_perf.cpp  compare_boyer_moore_perf.cpp  copy_perf.cpp  ctor_dtor_perf.cpp  english_wiki.txt  for_find_perf.cpp  grapheme_prop_lookup_perf.cpp  hindi_wiki_in_russian.txt  icu_normalization.cpp  insert_erase_perf.cpp  korean_wiki.txt  normalize_perf.cpp  portuguese_wiki.txt  snapshot.py  string_insert_max_perf.cpp  string_objects.hpp  strings.hpp  text_insert_max_perf.cpp  text_objects.hpp  text_set_compare_vs_collate_perf.cpp  transcoding_perf.cpp
perf/latest_snapshot/: collation_element_lookup_perf_001.json  collation_element_lookup_perf_002.json  collation_element_lookup_perf_003.json  collation_perf_002.json  collation_perf_005.json  compare_boyer_moore_perf.json  grapheme_prop_lookup_perf.json  normalize_perf.json
perf/snapshots/053c05e373d459c236b8c7400759e1f8bee45afe/: collation_element_lookup_perf_000.json  collation_element_lookup_perf_001.json  collation_element_lookup_perf_002.json  collation_element_lookup_perf_003.json  collation_element_lookup_perf_004.json  collation_element_lookup_perf_005.json  collation_element_lookup_perf_006.json  collation_perf_000.json  collation_perf_001.json  collation_perf_002.json  collation_perf_003.json  compare_boyer_moore_perf.json  copy_perf.json  ctor_dtor_perf.json  for_find_perf.json  grapheme_prop_lookup_perf.json  insert_erase_perf.json  normalize_perf.json
perf/snapshots/14badb45512797dff7fb2e0b3cb3e650a0bb26e8/: collation_element_lookup_perf_000.json  collation_element_lookup_perf_001.json  collation_element_lookup_perf_002.json  collation_element_lookup_perf_003.json  collation_element_lookup_perf_004.json  collation_element_lookup_perf_005.json  collation_element_lookup_perf_006.json  collation_perf_000.json  collation_perf_001.json  collation_perf_002.json  collation_perf_003.json  compare_boyer_moore_perf.json  copy_perf.json  ctor_dtor_perf.json  for_find_perf.json  grapheme_prop_lookup_perf.json  insert_erase_perf.json  normalize_perf.json
perf/snapshots/3e0c7de2c8aacd020ccb2d08feb8e431ed6416a2/: compare_boyer_moore_perf.json  copy_perf.json  ctor_dtor_perf.json  for_find_perf.json  grapheme_prop_lookup_perf.json  insert_erase_perf.json  normalize_perf.json
perf/snapshots/3e212aa8158dd343c5f6440c553d33d17d9ca0a3/: compare_boyer_moore_perf.json  copy_perf.json  ctor_dtor_perf.json  for_find_perf.json  grapheme_prop_lookup_perf.json  insert_erase_perf.json  normalize_perf.json
perf/snapshots/646bc3b1a9a3ea18c8c86831ddf0e2f0526252f3/: collation_element_lookup_perf_000.json  collation_element_lookup_perf_001.json  collation_element_lookup_perf_002.json  collation_element_lookup_perf_003.json  collation_element_lookup_perf_004.json  collation_element_lookup_perf_005.json  collation_element_lookup_perf_006.json  collation_perf_000.json  collation_perf_001.json  collation_perf_002.json  collation_perf_003.json  collation_perf_004.json  collation_perf_005.json  collation_perf_006.json  compare_boyer_moore_perf.json  copy_perf.json  ctor_dtor_perf.json  for_find_perf.json  grapheme_prop_lookup_perf.json  insert_erase_perf.json  normalize_perf.json
perf/snapshots/7f3cc87ecc9d459d9932e74578d5a3121780e8f9/: compare_boyer_moore_perf.json  copy_perf.json  (+4 more)
scripts/: CMakeLists.txt  generate_unicode_break_tests.py  generate_unicode_breaks.py  generate_unicode_case_data.py  generate_unicode_case_tests.py  generate_unicode_collation_data.py  generate_unicode_collation_tests.py  generate_unicode_data.py  generate_unicode_normalization_data.py  generate_unicode_normalization_tests.py  generate_unicode_tailoring_data.py  icu_caniter.cpp  lzw.py
test/: CMakeLists.txt  algorithm.cpp  bidi_character_test_000.cpp  bidi_character_test_001.cpp  bidi_character_test_002.cpp  bidi_character_test_003.cpp  bidi_character_test_004.cpp  bidi_character_test_005.cpp  bidi_character_test_006.cpp  bidi_character_test_007.cpp  bidi_character_test_008.cpp  bidi_character_test_009.cpp  bidi_character_test_010.cpp  bidi_character_test_011.cpp  bidi_character_test_012.cpp  bidi_character_test_013.cpp  bidi_character_test_014.cpp  bidi_character_test_015.cpp  bidi_character_test_016.cpp  bidi_character_test_017.cpp  bidi_character_test_018.cpp  bidi_character_test_019.cpp  bidi_character_test_020.cpp  bidi_character_test_021.cpp  bidi_character_test_022.cpp  bidi_character_test_023.cpp  bidi_character_test_024.cpp  bidi_character_test_025.cpp  bidi_character_test_026.cpp  bidi_character_test_027.cpp  bidi_character_test_028.cpp  bidi_character_test_029.cpp  bidi_character_test_030.cpp  bidi_character_test_031.cpp  bidi_character_test_032.cpp  bidi_character_test_033.cpp  bidi_character_test_034.cpp  bidi_character_test_035.cpp  bidi_character_test_036.cpp  bidi_character_test_037.cpp  (+3128 more)
(+12778 files in other folders)
